--- a/rsrc/email/gotMail/message.html
+++ b/rsrc/email/gotMail/message.html
@@ -20,7 +20,7 @@ a {
 
 <center>
 <table cellpadding=10 cellspacing=0 width=692>
-<tr><td><img src="${server_url}/images/email/header.png"></td></tr>
+<tr><td><img src="${server_url}/images/email/got_header.png"></td></tr>
 
 <tr><td>You received a Whirled mail:</td></tr>
 
@@ -41,7 +41,7 @@ If you no longer wish to receive email when you receive a Whirled mail, simply
 log in and configure your email preferences from "Me -> My Account".
 </td></tr>
 
-<tr><td style="padding-top: 40px"><img src="${server_url}/images/email/footer.png"></td></tr>
+<tr><td style="padding-top: 40px"><img src="${server_url}/images/email/got_footer.png"></td></tr>
 </table>
 
 </body>
