Beginnings of magic URL expansion. Still a few things to be done.

--- a/rsrc/email/wrapper/message.html
+++ b/rsrc/email/wrapper/message.html
@@ -53,6 +53,17 @@ blockquote {
   color: #FFFFFF;
   height: 125px;
 }
+
+.thingBox {
+  display: table;
+  text-align: center;
+}
+
+.thingBox img {
+  border: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
 </head>
 <body>
